[package]
name = "wlrs-server"
version = "0.1.0"
edition = "2021"
default-run = "wlrs-server"

[dependencies]
clap = { version = "4.5.9", features = [
    "std",
    "derive",
    "help",
    "color",
    "usage",
    "error-context",
] }
tungstenite = { version = "0.21.0", features = ["native-tls"] }
wlrs-auth = { path = "../wlrs-auth" }

[build-dependencies]
dotenv = { version = "0.15.0", default-features = false }

[profile.release]
codegen-units = 1
lto = true
